--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <div class="container">
     <div class="todo-app">
-        <h2>To-Do List <img src="/asset/todolist.png" alt="todo icon"></h2>
+        <h2>To-Do List <img src="https://raw.githubusercontent.com/Saroyann/javascript-todolist/master/asset/todolist.png" alt="todo icon"></h2>
 
         <div class="row">
             <input type="text" id="input-box" placeholder="tambahkan todolist anda">
