--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <div class="row">
             <input type="text" id="input-box" placeholder="tambahkan todolist anda">
-            <button>Tambahkan</button>
+            <button onclick="addTask()">Tambahkan</button>
         </div>
         <ul id="list-container">
             <!-- <li class="checked">Task 1</li>
